--- a/action.yml
+++ b/action.yml
@@ -2,11 +2,11 @@ name: 'Container Action Template'
 description: 'Get started with Container actions'
 author: 'GitHub'
 inputs: 
-  myInput:
+  x:
     description: 'Input to use'
     default: 'world'
 runs:
   using: 'docker'
   image: 'Dockerfile'
-  args:
-    - ${{ inputs.myInput }}
+  env:
+    X: ${{ inputs.x }}
