.github/workflows/dockerimage:

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -19,8 +19,9 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Bump version b
       uses: remorses/bump-version@master
+      working-directory: b
       with:
         version_file: b/VERSION
-        prefix: a
+        prefix: b
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
