--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v1
       with:
         path: a
-    - uses: remorses/bump-version@exp
+    - uses: remorses/bump-version@js
       with:
         version_file: b/VERSION
         prefix: b
